fixed url in collection/index.html

--- a/collection/index.html
+++ b/collection/index.html
@@ -11,7 +11,7 @@
       input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:14pt;color:#000000;}
     </style>
     
-    <form name="web_form" id="web_form" method="post" action="http://localhost/myprocessingscript.php">
+    <form name="web_form" id="web_form" method="post" action="http://jakerylandwilliams.github.io/partitioner/collection/myprocessingscript.php">
       <div>
 	<label>Instructions: The overall goal is to separate phrases&mdash;of one or more words&mdash;from one another, <br> but not so much that they might be misinterpreted on their own. <br> Place slashes, "/", where you think separations should go. <br> The placement of divisions is up to you and should reflect the meaning behind your text. <br> Write any and as much text as you would like. An example: <br><br> </label><br>
 	<textarea name="text" id="text" type="text" style="font-family:sans-serif;font-size:1.2em;" cols="100" rows="25" class="html-text-box"></textarea>
